# d-oscope

./: README.md  config.h.in  configure.ac
hardware/: dso.eeprom  dso_v3b.brd  dso_v3b.sch
include/: Makefile.am  allocations.h  comm.h  defines.h  init.h
src/: Makefile.am  d-oscope.c
src/init/: init_adconv.c  init_events.c  init_ports.c  init_rtc.c  init_sysclk.c  init_timers.c  init_usart.c  init_vars.c
src/ui/: comm.c
